--- a/wiki/HowTo_Customize_Forms_and_Listings.wiki
+++ b/wiki/HowTo_Customize_Forms_and_Listings.wiki
@@ -7,40 +7,28 @@
 
 Bungeni forms and listings can be customized using an xml configuration file. This page documents how to customize the listings
 
-= ui.xml =
+= forms/ui.xml =
 
-The main access point to customize forms and listings is the ui.xml file.
-
-This file can be found within the bungeni customization folder in a folder called forms.
-
-i.e. if your bungeni customization folder is in `src/bungeni_custom` - then this file can be found under `src/bungeni_custom/forms/ui.xml`.
+The main access point to customize forms and listings is the `forms/ui.xml` file, located within the bungeni customization folder i.e. if your bungeni customization folder is in `src/bungeni_custom` - then this file can be found under `src/bungeni_custom/forms/ui.xml`.
 
 All the information in ui.xml is contained within the `<ui>` element.
 
 {{{
 <ui roles="bungeni.Clerk bungeni.Speaker bungeni.MP bungeni.Minister bungeni.Anonymous">
-.....
-<descriptor ....>
-....
+    ...
+    <descriptor ... />
+    <descriptor ... />
+    ...
 </ui>
 }}}
 
-The `<ui>` element defines a `@roles` attribute :
-{{{
-<ui roles="bungeni.Clerk bungeni.Speaker bungeni.MP bungeni.Minister bungeni.Anonymous"  >
-....
-}}}
-
-*This `ui/@roles` attribute is purely for reference purposes and cannot be modified.*
+The `<ui>` element specifies an `@roles` attribute that defines the list of roles that may participate in the localization. The value of `ui/@roles` may be modified as needed e.g. to add other roles that you may have defined in yor deployment. An additional function of `ui/@roles` is that it also serves as the default value for all unspecified `@roles` attributes on other elements in the same XML document--those that support a `@roles` attribute of course e.g. the `<show>` and `<hide>` elements.
 
 
 == Forms == 
 
-Forms in Bungeni are used to add, view or edit Bungeni content. 
+Forms in Bungeni are used to add, view, edit or list Bungeni content. In `ui.xml` all the forms are defined within the `<ui>` element. E.g.
 
-In the ui.xml file all the forms are defined within the `<ui>` element.
-
-e.g.
 {{{
 <ui roles="bungeni.Clerk bungeni.Speaker bungeni.MP bungeni.Minister bungeni.Anonymous">
 
@@ -48,42 +36,32 @@ e.g.
         <field name="parliament_id" displayable="view listing" localizable="view listing">
             <hide modes="view listing" />
         </field>
-    ......
+        ...
     </descriptor>
-
+    
     <descriptor name="Question">
         <field name="parliament_id" displayable="view listing" localizable="view listing">
             <hide modes="view listing" />
         </field>
-    ......
+        ...
     </descriptor>
 
 </ui>
 
 }}}
 
-A Form in bungeni is called a *descriptor*, and is contained by the `<descriptor>` element.
-
-The `<descriptor>` has a name attribute:
-
-{{{
-
-<descriptor name="Question >
-...
-</descriptor>
-}}}
-
-This `descriptor/@name` attribute identifies the name of the Form.
+A Form specification in bungeni is called a *descriptor*, and is defined as a `<descriptor>` element.
+The `descriptor/@name` attribute identifies the name of the Form.
 
 
 == Form Modes == 
 
-Bungeni forms support presenting content in four different modes :
+Bungeni forms support presenting content in four different modes:
 
  * *add* - When new content is being added. e.g. if a member of parliament is adding a new question.
  * *edit* - When existing content is being edited . e.g. if a clerk is editing a question submitted by a Member of parliament.
  * *view* - When existing content is being viewed. e.g. if a public user is viewing a question on Bungeni.
- * *listing* - This mode is used when listing the content. e.g. if you go into the the page listing all the questions in the system, the question is dispalyed in the list based on the rules defined for this mode.
+ * *listing* - This mode is used when listing the content. e.g. if you go into the the page listing all the questions in the system, whether a question is displayed depends on the rules defined for this mode.
 
 
 == Form Fields ==
@@ -94,81 +72,84 @@ Below are some of the fields in a *Question* form.
 
 {{{
     <descriptor name="Question">
-        <field name="parliament_id" displayable="view listing" localizable="view listing">
-            <hide modes="view listing" />   <=== parliament id field
-        </field>
+        ...
         <field name="short_name" displayable="view edit add listing" localizable="view edit listing">
-            <show modes="view edit listing" /> <=== short name field
+            <show modes="view edit listing" />  <=== short name (title) field
         </field>
         <field name="full_name" displayable="view edit add" localizable="view edit add">
-            <show modes="view edit add" /> <== full name field 
+            <show modes="view edit add" />      <== full name (summary) field 
         </field>
         <field name="registry_number" displayable="view edit listing" localizable="view edit listing">
             <show modes="view" />
-            <hide modes="edit listing" /> <=== registry number
+            <hide modes="edit listing" />       <=== registry number (not shown in edit)
         </field>
-        ......
+        <field name="owner_id" displayable="view edit add listing" localizable="view listing">
+            <hide modes="view listing" roles="bungeni.Anonymous" />
+        </field>
+        <field name="language" displayable="view edit add listing" localizable="view edit listing">
+            <show modes="view edit" />
+            <hide modes="listing" />
+        </field>
+        <field name="body_text" displayable="view edit add" localizable="view">
+            <show modes="view" />
+        </field>
+        ...
     </descriptor>
 }}}
 
-Each of these corresponds to a field on a Question form :
+Each of these corresponds to a field on a Question form:
 
 [http://bungeni-portal.googlecode.com/files/add_question.png]
 
-The behavior of form fields is controllable via a combination of roles and [#Form_modes modes].
+The behavior of form fields is controllable via a combination of roles and [#Form_Modes modes].
 
-The `<field>` element has the following attributes :
+The `<field>` element has the following *information-only* attributes i.e. *you are NOT allowed to change the values of these attributes*:
 
- * _name_ - the `field/@name' attribute identifies the name of the field. *You are not allowed to change the name of the field* :
-          {{{
-           ..
-           <field name="parliament_id" ... 
-          }}}
- * _displayable_ - the `field/@displayable` attribute identifies in which [#Form_modes modes] the field *MAY* be localizable. *You are NOT allowed to change the values in  displayable*
- * _localizable_ - the `field/@localizable` attribute identifies the actual modes in which [#Form_modes modes] the field *CAN* be localizable. This is always a sub-set of modes listed in `field/@displayable`. *You are NOT allowed to change the modes listed as `localizable`.* 
- 
-Let us explain the difference between `field/@displayable` and `field/@localizable` using an example :
+ * *name* - the `field/@name' attribute identifies the name of the field. *You are not allowed to change the name of the field*:
+{{{
+        <field name="short_name" ... />
+}}}
+ * *displayable* - the `field/@displayable` attribute identifies in which [#Form_Modes modes] the field *MAY* be displayable i.e. the internal Bungeni system logic may display this field in this mode.
+ * *localizable* - the `field/@localizable` attribute identifies the actual modes in which [#Form_Modes modes] the field *CAN* be localizable i.e. you may control for whom this field should be made to appear in this mode. The list of localizable modes is necessarily always a sub-set of modes listed in `field/@displayable`. 
 
-The following states that the `registry_number` field *MAY* be localized in "view edit listing" modes ; and it *CAN* be localized also in "view edit listing" modes.
+Let us explain the difference between `field/@displayable` and `field/@localizable` using an example:
 
+The following states that the `registry_number` field *MAY* appear in "view edit listing" modes; and it *CAN* be localized also in "view edit listing" modes.
 {{{
         <field name="registry_number" 
-        displayable="view edit listing"  <<-- modes that MAY be localized
-        localizable="view edit listing"  <<-- modes that CAN be localized
+            displayable="view edit listing"  <<-- modes that MAY be localized
+            localizable="view edit listing"  <<-- modes that CAN be localized
         >
 }}}
 
-The following states that the `registry_number` field *MAY* be localized in "view edit listing" modes ; and it *CAN* be localized *only* "view" mode.
-
+The following states that the `registry_number` field *MAY* appear in "view edit listing" modes; but it *CAN* be localized *only* in "view" mode.
 {{{
         <field name="registry_number" 
             displayable="view edit listing" <<-- modes that MAY be localized
             localizable="view"              <<-- modes that CAN be localized
-            >
+        >
 }}}
-
 
 
 == Field Customization == 
 
-Fields are customized using `<show>` and `<hide>` specifed within a `<field>` element.
-These are the *ONLY* part of the Forms xml configuration which is editable by the user.
+Fields are customized using `<show>` and `<hide>` specified within a `<field>` element.
+These (in addition to field _order_) are the *ONLY* part of the Forms xml configuration which is editable by the user.
 
-`<show>` and `<hide>` do exactly what they are named as, `<show>` shows the field for the listed modes and roles , and `<hide>` hides the field for the listed modes and roles.
+`<show>` and `<hide>` do exactly what they are named as, `<show>` shows the field for the listed modes and roles, and `<hide>` hides the field for the listed modes and roles.
 
-Both these elements have the following attributes that allow customization of the field behavior :
+Both these elements have the following attributes that allow customization of the field behavior:
 
  * *modes* - lists the modes that are to be shown or hidden. The only modes allowed here are the ones listed in the `field/@localizable` attribute.
  * *roles* - lists the roles for which the modes are to be shown or hidden. The only roles allowed here are the ones listed in the `ui/@roles` attribute.
 
-There are some simple rules to follow while using `<show>` and `<hide>` :
+There are some simple rules to follow while using `<show>` and `<hide>`:
  * The only modes available for use are the ones provided by the `field/@localizable` attribute.
- * A mode appearing in `<show>` cannot also appear in `<hide>` and vice versa
+ * A mode may only appear once i.e. either in a `<show>` or or in `<hide>` directive.
 
-The usage of `<show>` and `<hide>` is explained below, via examples -- 
+The usage of `<show>` and `<hide>` is explained below, via examples --
 
 The following hides the `owner_id` field in "view listing" modes for the "bungeni.Anonymous" user.
-
 {{{
         <field name="owner_id" displayable="view edit add listing" localizable="view listing">
             <hide modes="view listing" roles="bungeni.Anonymous" />
@@ -176,8 +157,7 @@ The following hides the `owner_id` field in "view listing" modes for the "bungen
 }}}
 
 
-The following hides the `owner_id` field in "listing" mode for the "bungeni.Anonymous" user ; and makes the field available in "view" mode for all users (including "bungeni.Anonymous" ).
-
+The following hides the `owner_id` field in "listing" mode for the "bungeni.Anonymous" user; and makes the field available in "view" mode for all users (including "bungeni.Anonymous" ).
 {{{
         <field name="owner_id" displayable="view edit add listing" localizable="view listing">
             <hide modes="listing" roles="bungeni.Anonymous" />
@@ -185,8 +165,7 @@ The following hides the `owner_id` field in "listing" mode for the "bungeni.Anon
         </field>
 }}}
 
-The following is incorrect, because "listing" appears in both the `<show>` and `<hide>` modes.
-
+The following is incorrect, because "listing" appears in more than one `<show>` or `<hide>` directives.
 {{{
         <field name="owner_id" displayable="view edit add listing" localizable="view listing">
             <hide modes="listing" roles="bungeni.Anonymous" />
@@ -194,7 +173,7 @@ The following is incorrect, because "listing" appears in both the `<show>` and `
         </field>
 }}}
 
-The following hides the `owner_id` field in "listing" mode for the "bungeni.Anonymous" user ; and makes it visible in "view" mode *only* for users with the "bungeni.Clerk" role.
+The following hides the `owner_id` field in "listing" mode for the "bungeni.Anonymous" user; and makes it visible in "view" mode *only* for users with the "bungeni.Clerk" role.
 
 {{{
         <field name="owner_id" displayable="view edit add listing" localizable="view listing">
@@ -207,7 +186,7 @@ The following hides the `owner_id` field in "listing" mode for the "bungeni.Anon
 
 The order in which the fields are presented on a form can be customized by changing the order of fields within a descriptor. Changing the order of fields will be applicable to all modes.
 
-For example, the `registry_number` below appears after the `short_name` :
+For example, the `registry_number` below appears after the `short_name`:
 
 {{{
   <descriptor name="Question">
@@ -224,14 +203,14 @@ For example, the `registry_number` below appears after the `short_name` :
             <show modes="view" />
             <hide modes="edit listing" />
         </field>
-     .....
+        ...
   </descriptor>
 }}}
 
 The registry_number field was moved up to be the first field on the form -- 
 {{{
-  <descriptor name="Question">
-       <!-- registry_number below was moved up to be the first field -->
+    <descriptor name="Question">
+        <!-- registry_number below was moved up to be the first field -->
         <field name="registry_number" displayable="view edit listing" localizable="view edit listing">
             <show modes="view" />
             <hide modes="edit listing" />
@@ -245,74 +224,75 @@ The registry_number field was moved up to be the first field on the form --
         <field name="full_name" displayable="view edit add" localizable="view edit add">
             <show modes="view edit add" />
         </field>
-     .....
-  </descriptor>
+        ...
+    </descriptor>
 }}}
 
-Henceforth, the `registry_number` field is always displayed first on the form.
+Henceforth, the `registry_number` field (if at all displayed) is always displayed first on the form.
 
 == Examples of show/hide combinations == 
 
-For a field described like this :
+For a field described like this:
 
 {{{
-     <field name="owner_id" displayable="view edit add listing" localizable="view listing">
+        <field name="owner_id" displayable="view edit add listing" localizable="view listing">
             <hide modes="listing" roles="bungeni.Anonymous" />
             <show modes="view" roles="bungeni.Clerk" />
         </field>
 }}}
 
-The following are some examples of show/hide combinations :
+The following are some examples of show/hide combinations for the above field:
 
- * Hide in listing mode for anonymous ; Show in view mode for Clerk :
+ * Hide in listing mode for anonymous, show in view mode for Clerk:
 {{{
     <hide modes="listing" roles="bungeni.Anonymous" />
     <show modes="view" roles="bungeni.Clerk" />
 }}}
 
- * Hide in ALL modes for anonymous ; Show in view mode for Clerk :
+ * This is INCORRECT and will trigger a `BungeniCustomError` - it states to show in `edit` mode to the Clerk, but that mode is not localizable here:
+{{{
+    <hide modes="listing" roles="bungeni.Anonymous" />
+    <show modes="view edit" roles="bungeni.Clerk" />
+}}}
+
+ * This is INCORRECT and will trigger a `BungeniCustomError` - it states hide in ALL modes (inlcuding `view`) for Anonymous, but it also states to show in `view` mode (thus, repeats this mode that is not allowed) for the Clerk:
 {{{
     <hide roles="bungeni.Anonymous" />
     <show modes="view" roles="bungeni.Clerk" />
 }}}
 
- * Hide in ALL modes for anonymous ; Show in view mode for Clerk :
-{{{
-    <hide roles="bungeni.Anonymous" />
-    <show modes="view" roles="bungeni.Clerk" />
-}}}
-
- * This is INCORRECT - it states hide in ALL modes for MP, but show in Edit for all Roles :
-{{{
+ * This is INCORRECT and will trigger a `BungeniCustomError` - it states hide in ALL modes (here `view listing`) for the MP, but show in `listing` mode (thus, repeats this mode that is not allowed) for all Roles:
+   {{{
     <hide roles="bungeni.MP" />
-    <show modes="edit" />
-}}} 
-This is like stating :
-{{{
-    <hide modes="view edit add listing" roles="bungeni.MP" />
-    <show modes="edit" />
-}}} 
+    <show modes="listing" />
+   }}}
+   that would be just like stating:
+   {{{
+    <hide modes="view listing" roles="bungeni.MP" />
+    <show modes="listing" roles="bungeni.Clerk bungeni.Speaker bungeni.MP bungeni.Minister bungeni.Anonymous" />
+   }}} 
 
- * This is INCORRECT - it states hide in ALL modes for MP, but show in Edit for all Roles :
-{{{
+ * This is INCORRECT - it states hide in ALL modes for MP (here `view listing`), but also show in ALL modes (thus, repeated modes) for all Roles:
+   {{{
     <hide roles="bungeni.MP" />
     <show roles="bungeni.Clerk" />
-}}}
-This is like stating :
-{{{
-    <hide modes="view edit add listing" roles="bungeni.MP" />
-    <show modes="view edit add listing" roles="bungeni.Clerk" />
-}}} 
+   }}}
+   that would be just like stating:
+   {{{
+    <hide modes="view listing" roles="bungeni.MP" />
+    <show modes="view listing" roles="bungeni.Clerk" />
+   }}}
 
 
 == Restoring ui.xml == 
 
 It is good practice to make a backup copy of ui.xml whenever you edit it.
 
-However, you can also regenerate ui.xml to its original state by running :
-
+However, you can also regenerate `forms/ui.xml` to its original state by running:
 {{{
 ./bin/form-xml-restore 
 }}}
+from the buildout folder. 
+This will regenerate the `forms/ui.xml` from the source code definition of the forms.
 
-from the buildout folder. This will regenerate the ui.xml from the source code definition of the forms.
+
