Code cleanup: deleting junk file ui/version.zcml, left orphaned behind only g.knows which modification and when (a long time ago as the wiki page referring to it indicates) -- how much accumulated developer time could this have wasted to date?

--- a/wiki/HowTo_ViewletManagers.wiki
+++ b/wiki/HowTo_ViewletManagers.wiki
@@ -1,5 +1,7 @@
 #summary About viewlet managers
 
+!+OUTOFDATE(mr, jun-2011)
+
 The viewlet managers are:
 
  * version.manager in ui/version.zcml based on .version.VersionViewletManager
@@ -9,7 +11,7 @@ The viewlet managers are:
  * bungeni.workspace-archive in ui/viewlets/workspace.zcml based on zope.viewlet.manager.WeightOrderedViewletManager
 
 For 'version.manager' there is no 'version.py' module and it does not 
-include 'version.zcml' in any zcml file.
+include (the now deleted, circa r8360) 'version.zcml' in any zcml file.
 
 'bungeni.scheduling', 'bungeni.workspace, 'bungeni.workspace-archive' are based
 on standard viewlet manager.
